cluster/media-stack/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
